--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header {
   width: 354px;
   height: 508px;
 
-  background-image: url("/assets/bg-explorer.svg");
+  background-image: url("./assets/bg-explorer.svg");
   cursor: pointer;
 
   opacity: 0;
